--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^3.4.1"
+    "react-scripts": "^3.4.1",
+    "sweetalert2": "^11.4.18"
   },
   "scripts": {
     "start": "react-scripts start",
